Oct 17, 2002: Bill Adams <nospam-200201@evilbill.org>
- Clear s->flags when analyzing server info.

Oct 17, 2002: Bill Adams <nospam-200201@evilbill.org>
- Fixed init_masters to not have a memory leak.

Oct 16, 2002: Alex Burger <alex@users.sourceforge dot net>
- Created server_list_prepend_ndp which does not check for duplicates.
  Modified master_add_server to use server_list_prepend_ndp.  Modified
  init_master to do a duplicate check after loading all the masters.
  Greatly reduces startup time with large lists of serves.  Does NOT
  affect updating of masters once inside XQF.

Oct 16, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- show punkbuster warning only once

Oct 15, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- switch fix conversion when adding ut2s as gps
- update german translation

Oct 15, 2002: Bill Adams <nospam-200201@evilbill.org>
- Added some support for punkbuster and setting cl_punkbuster
  on the command line. It is an option in the q3a game config.
- Fixed the autogen.sh to better work with autoconf 2.5 in the case
  that both 2.5 and an earlier version are installed.
- Added --with-rpm-release to configure, properly sets the release
  when generating the xqf.spec file.

Oct 15, 2002: Alex Burger <alex@users.sourceforge dot net>
- Few minor changes to make it compile on gcc <3
- Properly fixed create_server_type_menu and create_master_type_menu
  bugs

Oct 14, 2002: Alex Burger <alex@users.sourceforge dot net>
- Fixed create_server_type_menu bug
- Added punkbuster (and locked_punkbuster) XPMs
- Modified create_server_type_menu to show all server types until bug
  can be figured out
- Updated help about and AUTHORS page with contributors
- Updated reserved slots support to use integers (Jochen Baier)
- Added reserved slots support for redial from Jochen Baier
  (email@jochen-baier.de).  Server properties page allows setting 
  for reserved admin slots for the server.
  
Oct 13, 2002: Alex Burger <alex@users.sourceforge dot net>